--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<meta name="format-detection" content="telephone=no" />
 		<meta name="msapplication-tap-highlight" content="no" />
 
-		<link rel="manifest" href="https://github.com/AkifhanIlgaz/wit/blob/main/public/manifest.json" />
+		<link rel="manifest" href="manifest.json" />
 
-		<link rel="shortcut icon" type="image/png" href="https://github.com/AkifhanIlgaz/wit/blob/main/public/favicon.png" />
+		<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
 		<!-- add to homescreen for ios -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -22,6 +22,6 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<script type="module" src="https://github.com/AkifhanIlgaz/wit/blob/main/index.html"></script>
+		<script type="module" src="/src/main.jsx"></script>
 	</body>
 </html>
