--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="manifest" href="manifest.json" />
 
 		<link rel="shortcut icon" type="image/png" href="/favicon.png" />
+		<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet" />
 
 		<!-- add to homescreen for ios -->
 		<meta name="apple-mobile-web-app-capable" content="yes" />
